fixed scaling issue on mobile version
Former-commit-id: 7cb8cb732143e37cb2fa8d16044a52093a90dc2c

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -200,7 +200,7 @@ a {
 }
 
 .show-as-background {
-  display: flex !important;
+  display: block !important;
 }
 
 .background-content {
